# verve

./: .gitignore  README.md  docker-compose.yaml  readme.md  sprite.code-workspace  verve.code-workspace
app-one/: package.json
app-one/src/: App.tsx
app-one/src/idl/: aa_poc.json
app-one/src/providers/: AaPocProgramContext.tsx
backend/: index.ts  package.json  wallet.json
compressed-program/: Anchor.toml  Cargo.toml  README.md  copy_idls.sh  package.json
compressed-program/programs/compressed-aa-poc/: Cargo.toml
compressed-program/test-keys/: compressed_aa_poc-keypair.json
compressed-program/tests/: compressed_aa_poc.ts
compressed-program/utils/: constants.ts  program.ts  types.ts
example/: package.json  vite.config.ts
example/src/: App.tsx  main.tsx  vite-env.d.ts
example/src/idl/: aa_poc.ts
frontend/: package.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
ledger/: Dockerfile  monitor.sh  run.sh
program/: Anchor.toml  Cargo.toml  package.json
program/programs/aa_poc/: Cargo.toml
program/programs/aa_poc/src/: lib.rs  trash.txt
program/tests/: aa_poc.ts
sdk/: .gitignore  .prettierrc.json  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json  vitest.config.ts
sdk/src/: index.ts  types.ts  utils.ts
sdk/tests/: index.test.ts
wallet-adapter/: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json
wallet-adapter/src/: adapter.ts
web-ui/: package.json  tailwind.config.ts
(+21 files in other folders)
