[package]
name = "aa_poc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aa_poc"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
tiny-keccak = { version = "2.0", features = ["sha3"] }
light-sdk = { version = "0.5" }
light-system-program = { version = "0.7" }
account-compression = { version = "0.7.0",  features = ["cpi"] }
